--- a/pages/index.html
+++ b/pages/index.html
@@ -8,21 +8,26 @@
 </head>
 <body>
     <div class="background-container">
-    <!-- Navigation Bar -->
-    <div class="navbar">
-        <div class="logo">
-            <img src="../assets/logo.png" alt="Logo">
+        <!-- Navigation Bar -->
+        <div class="navbar">
+            <div class="logo">
+                <img src="../assets/logo.png" alt="Logo">
+            </div>
+            <div class="nav-items">
+                <img src="../assets/nav1.png" alt="Image 1">
+                <img src="../assets/nav2.png" alt="Image 2">
+                <img src="../assets/nav3.png" alt="Image 3">
+                <img src="../assets/nav4.png" alt="Image 4">
+            </div>
+            <div class="login-btn">
+                <img src="../assets/log-in.png" alt="Log In">
+            </div>
         </div>
-        <div class="nav-items">
-            <img src="../assets/nav1.png" alt="Image 1">
-            <img src="../assets/nav2.png" alt="Image 2">
-            <img src="../assets/nav3.png" alt="Image 3">
-            <img src="../assets/nav4.png" alt="Image 4">
+
+        <div class="center-btn">
+            <img src="../assets/play-now.png">
         </div>
-        <div class="login-btn">
-            <img src="../assets/log-in.png" alt="Log In">
-        </div>
-    </div>
+
     </div>
 </body>
 </html>
