--- a/pages/index.html
+++ b/pages/index.html
@@ -7,25 +7,38 @@
     <title>404 Academy</title>
 </head>
 <body>
-    <div class="background-container">
+        <div class="background-container">
         <!-- Navigation Bar -->
         <div class="navbar">
-            <div class="logo">
-                <img src="../assets/logo.png" alt="Logo">
-            </div>
-            <div class="nav-items">
-                <img src="../assets/nav1.png" alt="Image 1">
-                <img src="../assets/nav2.png" alt="Image 2">
-                <img src="../assets/nav3.png" alt="Image 3">
-                <img src="../assets/nav4.png" alt="Image 4">
-            </div>
-            <div class="login-btn">
-                <img src="../assets/log-in.png" alt="Log In">
+            <div class="navbar-content">
+                <div class="logo">
+                    <img src="../assets/logo.png" alt="Logo">
+                </div>
+                <div class="nav-items">
+                    <img src="../assets/nav1.png" alt="Image 1">
+                    <img src="../assets/nav2.png" alt="Image 2">
+                    <img src="../assets/nav3.png" alt="Image 3">
+                    <img src="../assets/nav4.png" alt="Image 3">
+                </div>
+                <div class="login-btn">
+                    <img src="../assets/log-in.png" alt="Log In">
+                </div>
             </div>
         </div>
 
         <div class="center-btn">
             <img src="../assets/play-now.png">
+        </div>
+
+        <div class="content">
+            
+            <!-- Image Group as Content -->
+            <div class="image-container">
+                <img src="../assets/bush1.png" alt="Image 1">
+                <img src="../assets/bush2.png" alt="Image 2">
+                <img src="../assets/bush3.png" alt="Image 3">
+            </div>
+            
         </div>
 
     </div>
