--- a/pages/index.html
+++ b/pages/index.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/HomeStyle.css" />
     <title>404 Academy</title>
 </head>
 <body>
-        <div class="background-container">
+    <div class="background-container">
         <!-- Navigation Bar -->
         <div class="navbar">
-            <div class="navbar-content">
+            <div class="con">
                 <div class="logo">
                     <img src="../assets/logo.png" alt="Logo">
                 </div>
+                <!-- I want them to stick together -->
                 <div class="nav-items">
                     <img src="../assets/nav1.png" alt="Image 1">
                     <img src="../assets/nav2.png" alt="Image 2">
                     <img src="../assets/nav3.png" alt="Image 3">
-                    <img src="../assets/nav4.png" alt="Image 3">
+                    <img src="../assets/nav4.png" alt="Image 4">
                 </div>
                 <div class="login-btn">
                     <img src="../assets/log-in.png" alt="Log In">
