--- a/pages/about.html
+++ b/pages/about.html
@@ -3,10 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - Our Team</title>
     <link rel="stylesheet" href="../css/aboutStyle.css" />
-    <title>About Us</title>
+    <script src="../js/about.js"></script>
 </head>
 <body>
-    <h1>About Us</h1>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <h1>Our Team</h1>
+            </div>
+        </nav>
+    </header>
+
+    <main class="about-us">
+        <a href="member1.html" class="team-member">
+            <img src="../assets/xiaolong.jpg" alt="Team Member 1">
+            <h2>Member 1</h2>
+            <p>CEO / Lead Developer</p>
+            <div class="bio">
+                <p>小龙 is a passionate for creating interactive web applications. He loves noodles</p>
+            </div>
+        </a>
+        
+        <a href="member2.html" class="team-member">
+            <img src="../assets/nicole.jpg" alt="Team Member 2">
+            <h2>Member 2</h2>
+            <p>Designer</p>
+            <div class="bio">
+                <p>Nicole is a creative designer who loves crafting beautiful and user-friendly interfaces. She makes things cute</p>
+            </div>
+        </a>
+        
+        <a href="member3.html" class="team-member">
+            <img src="../assets/audrey.jpg" alt="Team Member 3">
+            <h2>Member 3</h2>
+            <p>CIO</p>
+            <div class="bio">
+                <p>Audrey ensures that all projects are completed on time and to the highest standard. She is also a capybara</p>
+            </div>
+        </a>
+    </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
