--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
     </header>
 
     <main class="about-us">
-        <a href="member1.html" class="team-member">
+        <a href="xiaolong.html" class="team-member">
             <img src="../assets/xiaolong.jpg" alt="Team Member 1">
             <h2>Member 1</h2>
             <p>CEO / Lead Developer</p>
@@ -26,7 +26,7 @@
             </div>
         </a>
         
-        <a href="member2.html" class="team-member">
+        <a href="nicole.html" class="team-member">
             <img src="../assets/nicole.jpg" alt="Team Member 2">
             <h2>Member 2</h2>
             <p>Designer</p>
@@ -35,7 +35,7 @@
             </div>
         </a>
         
-        <a href="member3.html" class="team-member">
+        <a href="audrey.html" class="team-member">
             <img src="../assets/audrey.jpg" alt="Team Member 3">
             <h2>Member 3</h2>
             <p>CIO</p>
