--- a/pages/index.html
+++ b/pages/index.html
@@ -16,11 +16,19 @@
                 </div>
                 <!-- I want them to stick together -->
                 <div class="nav-items">
-                    <img src="../assets/nav1.png" alt="Image 1">
-                    <img src="../assets/nav2.png" alt="Image 2">
-                    <img src="../assets/nav3.png" alt="Image 3">
-                    <img src="../assets/nav4.png" alt="Image 4">
-                </div>
+                    <a href="404.html">
+                        <img src="../assets/nav1.png" alt="Image 1">
+                    </a>
+                    <a href="404.html">
+                        <img src="../assets/nav2.png" alt="Image 2">
+                    </a>
+                    <a href="404.html">
+                        <img src="../assets/nav3.png" alt="Image 3">
+                    </a>
+                    <a href="about.html">
+                        <img src="../assets/nav4.png" alt="Image 4">
+                    </a>
+                </div>                
                 <div class="login-btn">
                     <img src="../assets/log-in.png" alt="Log In">
                 </div>
@@ -28,8 +36,10 @@
         </div>
 
         <div class="center-btn">
-            <img src="../assets/play-now.png">
-        </div>
+            <a href="#">
+                <img src="../assets/play-now.png">
+            </a>
+            </div>
 
         <div class="content">
             
