--- a/pages/index.html
+++ b/pages/index.html
@@ -35,6 +35,10 @@
             </div>
         </div>
 
+        <div class="nyanCat">
+            <img src="../assets/nyan-cat.gif">
+        </div>
+
         <div class="center-btn">
             <a href="#">
                 <img src="../assets/play-now.png">
