--- a/pages/index.html
+++ b/pages/index.html
@@ -30,7 +30,9 @@
                     </a>
                 </div>                
                 <div class="login-btn">
-                    <img src="../assets/log-in.png" alt="Log In">
+                    <a href="login.html">
+                        <img src="../assets/log-in.png" alt="Log In">
+                    </a>
                 </div>
             </div>
         </div>
