--- a/pages/nicole.html
+++ b/pages/nicole.html
@@ -27,13 +27,10 @@
                 </ul>
                 <ul class = "icons">
                     <li>
-                        <i class = "fa fa-facebook"></i>
+                        <i class = "fa fa-reddit"></i>
                     </li>
                     <li>
                         <i class = "fa fa-github"></i>
-                    </li>
-                    <li>
-                        <i class = "fa fa-pinterest"></i>
                     </li>
                 </ul>
             </div>
