--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <!-- I want them to stick together -->
                 <div class="nav-items">
-                    <a href="404.html">
+                    <a href="learn2.html">
                         <img src="../assets/nav1.png" alt="Image 1">
                     </a>
                     <a href="404.html">
@@ -44,7 +44,7 @@
         </div>
 
         <div class="center-btn">
-            <a href="#">
+            <a href="learn2.html">
                 <img src="../assets/play-now.png">
             </a>
             </div>
