--- a/pages/learn.html
+++ b/pages/learn.html
@@ -20,9 +20,9 @@
     <div id="navbar" class="navbar">
       <ul>
         <li><a class="nav-blog" title="News" href="#">News</a></li>
-        <li><a class="nav-forum" title="Legal" href="#">Legal</a></li>
-        <li><a class="nav-help" title="Download" href="#">Download</a></li>
-        <li><a class="nav-membership" title="Help" href="#">Help</a></li>
+        <li><a class="nav-forum" title="Legal" href="404.html">Legal</a></li>
+        <li><a class="nav-help" title="Download" href="404.html">Download</a></li>
+        <li><a class="nav-membership" title="Help" href="about.html">Help</a></li>
         <li><a class="nav-eshop" title="Social" href="#">Social</a></li>
       </ul>
     </div>
@@ -36,7 +36,7 @@
           </div>
         </a>
       </div>
-      <p class="date">26th Aug 2024</p>
+      <p class="date">27th Aug 2024</p>
     </div>
     <div class="2">
       <div class="left-side">
