--- a/pages/audrey.html
+++ b/pages/audrey.html
@@ -3,36 +3,50 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Xiaolong</title>
+        <title>Audrey</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/personal.css">
         <script src="../js/lib.js"></script>
     </head>
     <body>
         <section>
-            <div class = "image">
-               <!-- <img src="https://cdn.pixabay.com/photo/2017/08/26/23/37/business-2684758__340.png"> -->
-               <img src="../assets/audreyPersonal.jpg">
-               <h2>Audrey</h2>
+            <!-- Section 1: Introduction -->
+            <div class="profile">
+                <div class="image">
+                    <img src="../assets/audreyPersonal.jpg" alt="Nicole's Profile Picture">
+                    <h2>Nicole</h2>
+                </div>
+                <div class="description">
+                    <h2>Introduction</h2>
+                    <p>Hi, my name is Audrey (Chinese name: 魏晓彤). I’m a computer science major from Indonesia. I’m the CIO and writer of the group Three Amigos. I was responsible for writing the text content of our website as well as submitting the project. Aside from programming and studies, I like to crochet and knit.
+                    </p>
+                </div>
             </div>
 
-            <div class = "content">
-                <h2>About Me</h2>
-                <span><!-- line here --></span>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis aspernatur voluptas inventore ab voluptates nostrum minus illo laborum harum laudantium earum ut, temporibus fugiat sequi explicabo facilis unde quos corporis!</p>
-                <ul class = "links">
-                    <li><a href = "#">work</a></li>
-                    <div class = "vertical-line"></div>
-                    <li><a href = "#">contact</a></li>
-                </ul>
-                <ul class = "icons">
-                    <li>
-                        <i class = "fa fa-reddit"></i>
-                    </li>
-                    <li>
-                        <i class = "fa fa-github"></i>
-                    </li>
-                </ul>
+            <!-- Section 2: Professional Life -->
+            <div class="profile">
+                <div class="image">
+                    <img src="../assets/laptop.png" alt="Nicole at Work">
+                    <h2>Professional Life</h2>
+                </div>
+                <div class="description">
+                    <h2>My Career</h2>
+                    <p>
+                        I’ve always been interested in computers since I was little. My first laptop was an Elevo R10 that was a few years older than I was at the time. It was an old slow thing that I somehow managed to work on until highschool. It is still alive and running Linux at the time of writing this, it will outlive any of my future computers at this rate and I won’t have it any other way.
+                        </p>
+                </div>
+            </div>
+
+            <!-- Section 3: Hobbies and Interests -->
+            <div class="profile">
+                <div class="image">
+                    <img src="../assets/audreyplushies.png" alt="Nicole's Hobbies">
+                    <h2>Hobbies</h2>
+                </div>
+                <div class="description">
+                    <h2>What I Love</h2>
+                    <p>I find the activity to be incredibly relaxing and helps flex some of my creative muscles. The plush dolls make an especially good gift for others too. I also like cute things and this hobby just gives me the power to feed my own addiction. At the time of writing this, I’m working on a raccoon plush and a blanket.                        </p>
+                </div>
             </div>
         </section>
     </body>
