--- a/pages/learn.html
+++ b/pages/learn.html
@@ -52,7 +52,7 @@
                 <div class="info-without-more">
                   <h3 class="title">what's the difference?</h3>
                   <p class="prev-p">Ready to start the challenge?? Let's get to know all about web!</p>
-                  <a class="comments-pre">
+                  <a class="comments-pre" href="chapt1.html">
                     Chapter 1
                   </a>
                 </div>
