--- a/pages/nicole.html
+++ b/pages/nicole.html
@@ -3,36 +3,49 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Xiaolong</title>
+        <title>Nicole's Personal Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/personal.css">
         <script src="../js/lib.js"></script>
     </head>
     <body>
         <section>
-            <div class = "image">
-               <!-- <img src="https://cdn.pixabay.com/photo/2017/08/26/23/37/business-2684758__340.png"> -->
-               <img src="../assets/nicolePersonal.jpg">
-               <h2>Nicole</h2>
+            <!-- Section 1: Introduction -->
+            <div class="profile">
+                <div class="image">
+                    <img src="../assets/nicolePersonal.jpg" alt="Nicole's Profile Picture">
+                    <h2>Nicole</h2>
+                </div>
+                <div class="description">
+                    <h2>Introduction</h2>
+                    <p>I'm a Computer Science major from Malaysia with a passion for creativity and technology. I’m the designer for my group, "Three Amigos," where I take full responsibility for crafting everything on our website from scratch. From the layout and color schemes to user experience, I ensure every detail reflects our vision. I also handle video editing, bringing our projects to life through dynamic visuals and storytelling.</p>
+                </div>
             </div>
 
-            <div class = "content">
-                <h2>About Me</h2>
-                <span><!-- line here --></span>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis aspernatur voluptas inventore ab voluptates nostrum minus illo laborum harum laudantium earum ut, temporibus fugiat sequi explicabo facilis unde quos corporis!</p>
-                <ul class = "links">
-                    <li><a href = "#">work</a></li>
-                    <div class = "vertical-line"></div>
-                    <li><a href = "#">contact</a></li>
-                </ul>
-                <ul class = "icons">
-                    <li>
-                        <i class = "fa fa-reddit"></i>
-                    </li>
-                    <li>
-                        <i class = "fa fa-github"></i>
-                    </li>
-                </ul>
+            <!-- Section 2: Professional Life -->
+            <div class="profile">
+                <div class="image">
+                    <img src="../assets/nicole2.png" alt="Nicole at Work">
+                    <h2>Professional Life</h2>
+                </div>
+                <div class="description">
+                    <h2>My Career</h2>
+                    <p>Beyond programming, editing, and designing, I live a double life as a small content creator on YouTube (lmao). Creating content and sharing my ideas has always been something I loved, and that passion is a huge part of why I chose to become the designer for our team. My creative side helps me think outside the box, whether it's for personal content or professional projects.</p>
+                </div>
+            </div>
+
+            <!-- Section 3: Hobbies and Interests -->
+            <div class="profile">
+                <div class="image">
+                    <img src="../assets/nicole3.png" alt="Nicole's Hobbies">
+                    <h2>Hobbies</h2>
+                </div>
+                <div class="description">
+                    <h2>What I Love</h2>
+                    <p>Sports are another major part of my life—basketball, running, and going to the gym are my daily rituals. Staying active keeps me balanced and energized, and it’s something I’ve always made time for.
+                        I first discovered my passion for editing when I was a kid, playing around with an old computer my mom had. I used to edit videos just for fun, and that hobby grew into a love for design and creativity that shapes who I am today.
+                        </p>
+                </div>
             </div>
         </section>
     </body>
