--- a/pages/xiaolong.html
+++ b/pages/xiaolong.html
@@ -10,29 +10,43 @@
     </head>
     <body>
         <section>
-            <div class = "image">
-               <!-- <img src="https://cdn.pixabay.com/photo/2017/08/26/23/37/business-2684758__340.png"> -->
-               <img src="../assets/xiaolongPersonal.jpg">
-               <h2>小龙</h2>
+            <!-- Section 1: Introduction -->
+            <div class="profile">
+                <div class="image">
+                    <img src="../assets/xiaolongPersonal.jpg" alt="I am tired">
+                    <h2>Nicole</h2>
+                </div>
+                <div class="description">
+                    <h2>Introduction</h2>
+                    <p>Hi, my name is Ahmed (Chinese name: 小龙). Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto eaque, facere odit aliquid iste ut! Voluptatibus perspiciatis quasi, quas qui illum iusto totam molestias eligendi sapiente dolorem quam ipsam aut?
+                    </p>
+                </div>
             </div>
 
-            <div class = "content">
-                <h2>About Me</h2>
-                <span><!-- line here --></span>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis aspernatur voluptas inventore ab voluptates nostrum minus illo laborum harum laudantium earum ut, temporibus fugiat sequi explicabo facilis unde quos corporis!</p>
-                <ul class = "links">
-                    <li><a href = "#">work</a></li>
-                    <div class = "vertical-line"></div>
-                    <li><a href = "#">contact</a></li>
-                </ul>
-                <ul class = "icons">
-                    <li>
-                        <i class = "fa fa-reddit"></i>
-                    </li>
-                    <li>
-                        <i class = "fa fa-github"></i>
-                    </li>
-                </ul>
+            <!-- Section 2: Professional Life -->
+            <div class="profile">
+                <div class="image">
+                    <img src="../assets/memecareer.jpg" alt="hackin looool">
+                    <h2>Professional Life</h2>
+                </div>
+                <div class="description">
+                    <h2>My Career</h2>
+                    <p>
+                       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero nulla ipsam, laborum architecto quasi impedit aliquid porro! Laudantium, aliquid fugit. Sunt id quae velit non odit et necessitatibus ipsa recusandae.
+                        </p>
+                </div>
+            </div>
+
+            <!-- Section 3: Hobbies and Interests -->
+            <div class="profile">
+                <div class="image">
+                    <img src="../assets/audreyplushies.png" alt="Nicole's Hobbies">
+                    <h2>Hobbies</h2>
+                </div>
+                <div class="description">
+                    <h2>What I Love</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptatem, deleniti vero ad et soluta distinctio dicta mollitia! Tenetur autem saepe aut, sint impedit commodi unde natus officia sequi iste.</p>
+                </div>
             </div>
         </section>
     </body>
