about me update

--- a/pages/xiaolong.html
+++ b/pages/xiaolong.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="description">
                     <h2>Introduction</h2>
-                    <p>Hi, my name is Ahmed (Chinese name: 小龙). Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto eaque, facere odit aliquid iste ut! Voluptatibus perspiciatis quasi, quas qui illum iusto totam molestias eligendi sapiente dolorem quam ipsam aut?
+                    <p>Hi, my name is Ahmed, but you can also call me 小龙, my Chinese name. I’m the CEO, lead developer, and, well, the entire programming team rolled into one! With a background in Computer Science, I’ve always been passionate about coding and creating digital experiences. Whether it’s writing lines of code or brainstorming the next big idea, I’m the one making things happen behind the scenes.
                     </p>
                 </div>
             </div>
@@ -32,20 +32,20 @@
                 <div class="description">
                     <h2>My Career</h2>
                     <p>
-                       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero nulla ipsam, laborum architecto quasi impedit aliquid porro! Laudantium, aliquid fugit. Sunt id quae velit non odit et necessitatibus ipsa recusandae.
-                        </p>
+                        So it all started when I was born... just kidding! But my tech journey has been anything but ordinary. I’m a full-stack web developer, which means I handle everything from crafting beautiful front-end designs to building rock-solid back-end systems. But that’s not all—I also dive into game development and hybrid mobile app development. Sometimes I have the urge to make a game just to never complete it (cries)
+                    </p>
                 </div>
             </div>
 
             <!-- Section 3: Hobbies and Interests -->
             <div class="profile">
                 <div class="image">
-                    <img src="../assets/audreyplushies.png" alt="Nicole's Hobbies">
+                    <img src="../assets/hobbies.webp" alt="Nicole's Hobbies">
                     <h2>Hobbies</h2>
                 </div>
                 <div class="description">
                     <h2>What I Love</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem voluptatem, deleniti vero ad et soluta distinctio dicta mollitia! Tenetur autem saepe aut, sint impedit commodi unde natus officia sequi iste.</p>
+                    <p>Ever heard of Yu-Gi-Oh? Well, I kind of play this game a lot—like, a lot! I’m a big fan of video games in general, but when I need to step away from the screen, I’m all about staying active. Running, working out, and cooking are some of my favorite ways to unwind. Seriously, you’ve got to try cooking—it’s a blast! Whether I’m mastering a new recipe or just going for a jog, I like to keep things balanced and fun, both on and off the screen.</p>
                 </div>
             </div>
         </section>
