about me update

--- a/pages/audrey.html
+++ b/pages/audrey.html
@@ -14,7 +14,7 @@
             <div class="profile">
                 <div class="image">
                     <img src="../assets/audreyPersonal.jpg" alt="Nicole's Profile Picture">
-                    <h2>Nicole</h2>
+                    <h2>Audrey</h2>
                 </div>
                 <div class="description">
                     <h2>Introduction</h2>
