--- a/pages/playground.html
+++ b/pages/playground.html
@@ -1,9 +1,42 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Document</title>
-</head>
-<body>
-  <h1>h1</h1>
+<html> done
+<head> done
+  <link rel="stylesheet" href="style.css"> done
+</head> done
+<body> done
+  <h1>h1</h1> done
 </body>
 </html>
+
+
+<ul class="sortable-list">
+  <li class="item" draggable="true">
+    <div class="details">
+      <span>&lt;/style&gt;</span>
+    </div>
+    <i class="uil uil-draggabledots"></i>
+  </li>
+  <li class="item" draggable="true">
+    <div class="details">
+      <span>p {</span>
+    </div>
+    <i class="uil uil-draggabledots"></i>
+  </li>
+  <li class="item" draggable="true">
+    <div class="details">
+      <span>}</span>
+    </div>
+    <i class="uil uil-draggabledots"></i>
+  </li>
+  <li class="item" draggable="true">
+    <div class="details">
+      <span>color: red;</span>
+    </div>
+    <i class="uil uil-draggabledots"></i>
+  </li>
+  <li class="item" draggable="true">
+    <div class="details">
+      <span>&lt;style&gt;</span>
+    </div>
+    <i class="uil uil-draggabledots"></i>
+  </li>
+</ul>
