--- a/pages/playground.html
+++ b/pages/playground.html
@@ -35,28 +35,34 @@
 </body>
 </html> -->
 
-<!-- /* Element Selector */
-p {
-    text
-}
-
-/* Class Selector */
-.example-class {
-    color: green;
-    font-weight: bold;
-}
-
-/* ID Selector */
-#example-id {
-    color: red;
-    font-style: italic;
-}
-
-/* Attribute Selector */
-a[title="attribute selector"] {
-    color: purple;
-    text-decoration: none;
-} -->
+/* Center align text in all <p> elements */
+  p {
+      text-align: center;
+  }
+  
+  /* Style for elements with the class "example-class" */
+  .example-class {
+      color: green;
+      font-weight: bold;
+  }
+  
+  /* Style for the element with the ID "example-id" */
+  #example-id {
+      color: red;
+  }
+  
+  /* Style for the <a> element with a specific title attribute */
+  a[title="attribute selector"] {
+      font-size: larger;
+      text-decoration: none;
+  }
+  
+  /* Style for the <div> element with the class "example-class" */
+  div.example-class {
+      border: 2px solid black;
+      font-weight: bold;
+  }
+  
 
 
 <!-- <ul class="sortable-list">
