--- a/pages/index.html
+++ b/pages/index.html
@@ -20,10 +20,10 @@
                     <a href="learn.html">
                         <img src="../assets/nav1.png" alt="Image 1">
                     </a>
-                    <a href="404.html">
+                    <a href="quizzes.html">
                         <img src="../assets/nav2.png" alt="Image 2">
                     </a>
-                    <a href="404.html">
+                    <a href="download.html">
                         <img src="../assets/nav3.png" alt="Image 3">
                     </a>
                     <a href="about.html">
