--- a/pages/learn.html
+++ b/pages/learn.html
@@ -14,7 +14,7 @@
 <body data-new-gr-c-s-check-loaded="14.1192.0" data-gr-ext-installed="" monica-version="5.10.5"
   monica-id="ofpnmcalabcbjgholdjcjblkibolbppb">
   <nav>
-    <a href="index.html">
+    <a href="../index.html">
       <img src="../assets/logo.png" alt="logo">
     </a>
     <div id="navbar" class="navbar">
@@ -107,7 +107,7 @@
               </div>
             </div>
             <div class="article-preview">
-              <img src="./Moshi Monsters Rewritten - The Daily Growl_files/61f698962c674.png"
+              <img src="../assets/growlnail_circus.png"
                 alt="Last chance to get your exclusive statues!" class="post_img">
               <div class="info">
                 <div class="info-without-more">
