--- a/pages/xiaolong.html
+++ b/pages/xiaolong.html
@@ -26,7 +26,7 @@
             <!-- Section 2: Professional Life -->
             <div class="profile">
                 <div class="image">
-                    <img src="../assets/memecareer.jpg" alt="hackin looool">
+                    <img src="../assets/catlaptop.gif" alt="hackin looool">
                     <h2>Professional Life</h2>
                 </div>
                 <div class="description">
