--- a/pages/finalChpat.html
+++ b/pages/finalChpat.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/chapters.css">
     <link rel="stylesheet" href="../css/navbar.css" />
-    <title>Chapter 4</title>
+    <title>Web Project</title>
 </head>
 
 <body style="background-image: url('../assets/quizBG2.png');">
