--- a/pages/congrats.html
+++ b/pages/congrats.html
@@ -23,11 +23,12 @@
   .img {
     display: flex;
     justify-content: center;
+    height: 100vh;
 }
 
 .img img {
     width: 35%;
-    height: 25%;
+    height: 100%%;
     margin-bottom: 20px;
 }
 
