--- a/pages/download.html
+++ b/pages/download.html
@@ -19,13 +19,13 @@
 
         <!-- Grid of square download buttons -->
         <div class="download-grid">
-            <a href="../assets/Beginners_Guide_to_HTML.pdf" download class="download-button">
+            <a href="../assets/html_cheat_sheet.pdf" download class="download-button">
                 <span>HTML</span>
             </a>
-            <a href="../assets/Advanced_CSS_Techniques.pdf" download class="download-button">
+            <a href="../assets/css_cheat_sheet.pdf" download class="download-button">
                 <span>CSS</span>
             </a>
-            <a href="../assets/JavaScript_Basics.pdf" download class="download-button">
+            <a href="../assets/js_cheat_sheet.pdf" download class="download-button">
                 <span>JavaScript</span>
             </a>
             <a href="../assets/Web_Development_Tools.pdf" download class="download-button">
