--- a/pages/learn.html
+++ b/pages/learn.html
@@ -111,14 +111,14 @@
                 alt="Last chance to get your exclusive statues!" class="post_img">
               <div class="info">
                 <div class="info-without-more">
-                  <h3 class="title">Last chance to get your exclusive statues!</h3>
-                  <p class="prev-p">Today is your last chance to grab a Gold Edison and Silver Pocito statue.</p>
+                  <h3 class="title">Web development project!</h3>
+                  <p class="prev-p">Now let's get our hands dirty and make an actual website!</p>
                   <a class="comments-pre">
-                    Latest News
+                    Project
                   </a>
                 </div>
                 <a class="more"
-                  href="#"></a>
+                  href="finalChpat.html"></a>
               </div>
             </div>
           </div>
