--- a/pages/congrats.html
+++ b/pages/congrats.html
@@ -7,9 +7,12 @@
 <body>
 
 <div class="js-container container" style="top:0px !important;">
+    <a href="../index.html" class="logo">
+        <img src="../assets/back.png" alt="Logo">
+    </a>
   <div class="congratulations-text">Congratulations</div>
+  <p>Now you ca</p>
   <div class="img">
-
       <img src="../assets/celb.jpg">
   </div>
 </div>
@@ -28,7 +31,7 @@
 
 .img img {
     width: 35%;
-    height: 100%%;
+    height: 100%;
     margin-bottom: 20px;
 }
 
