--- a/pages/learn.html
+++ b/pages/learn.html
@@ -38,8 +38,8 @@
       </div>
       <p class="date">27th Aug 2024</p>
     </div>
-    <div class="2">
-      <div class="left-side">
+    <div class="dude" style="display: flex;justify-content: center;align-items:center;">
+      
         <div class="blog-article">
           <div class="back-next">
             <a class="Next" href="#">Next</a>
@@ -125,7 +125,7 @@
           <div class="footer-next-back">
             <a class="Next" href="#">Next</a>
           </div>
-        </div>
+        
       </div>
       </div>
     </div>
