--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,10 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">
+            <a href="../index.html" class="logo">
+                <img src="../assets/back.png" alt="Logo">
+            </a>        
+            <div class="title">
                 <h1>Our Team</h1>
             </div>
         </nav>
