adding a loccking system

--- a/pages/congrats.html
+++ b/pages/congrats.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="js-container container" style="top:0px !important;">
-    <a href="../learn.html" class="logo">
+    <a href="learn.html" class="logo">
         <img src="../assets/back.png" alt="Logo">
     </a>
   <div class="congratulations-text">Congratulations</div>
