--- a/pages/learn.html
+++ b/pages/learn.html
@@ -28,6 +28,14 @@
       </ul>
     </div>
   </nav>
+  <div id="loginOverlay" class="overlay">
+    <div class="overlay-content">
+        <h2>Please Log In</h2>
+        <p>You must log in to access this page.</p>
+        <button id="loginButton"><a href="login.html" style="text-decoration: none;color: white;">Log In</a></button>
+    </div>
+</div>
+
   <section>
     <div class="1">
       <div class="bg">
@@ -115,7 +123,7 @@
                   </a>
                 </div>
                 <a class="more"
-                  href="finalChpat.html"></a>
+                  href="finalChapt.html"></a>
               </div>
             </div>
           </div>
@@ -135,6 +143,6 @@
     data-cf-beacon="{&quot;token&quot;: &quot;0f3b3564f40246de9fe8dce7f2a462f0&quot;}"></script>
   <script src="./Moshi Monsters Rewritten - The Daily Growl_files/main.js.download"></script>
   <script src="./Moshi Monsters Rewritten - The Daily Growl_files/minigame.js.download"></script> -->
-
+<script src="../js/learn.js"></script>
 </body>
 </html>
