--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             // Log out functionality
             document.getElementById('logoutBtn').addEventListener('click', function() {
                 localStorage.removeItem('loggedInUser'); // Clear the logged-in user from local storage
-                window.location.href = './pages/login.html'; // Redirect to the login page
+                window.location.href = 'index.html'; // Redirect to the login page
             });
         });
     </script>
