--- a/pages/about.html
+++ b/pages/about.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="../index.html" class="logo">
+            <div id="backBtn">
                 <img src="../assets/back.png" alt="Logo">
-            </a>        
+            </div>       
             <div class="title">
                 <h1>Our Team</h1>
             </div>
@@ -47,7 +47,16 @@
             </div>
         </a>
     </main>
+    <script>
+        document.getElementById('backBtn').addEventListener('click', function () {
+            if (window.history.length > 1) {
+                window.history.back();
+            } else {
+                window.location.href = 'index.html'; 
+            }
+        });
 
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
