--- a/pages/learn.html
+++ b/pages/learn.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../css/magnific-popup.css">
   <link rel="stylesheet" href="../css/animate.min.css">
   <link rel="stylesheet" href="../css/learn.css">
+  <link rel="stylesheet" href="../css/navbar.css">
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.1192.0" data-gr-ext-installed="" monica-version="5.10.5"
@@ -18,16 +19,25 @@
     <a href="../index.html">
       <img src="../assets/logo.png" alt="logo">
     </a>
-    <div id="navbar" class="navbar">
-      <ul>
-        <li><a class="nav-blog" title="News" href="#">News</a></li>
-        <li><a class="nav-forum" title="Legal" href="404.html">Legal</a></li>
-        <li><a class="nav-help" title="Download" href="download.html">Download</a></li>
-        <li><a class="nav-membership" title="Help" href="about.html">Help</a></li>
-        <li><a class="nav-eshop" title="Social" href="#">Social</a></li>
-      </ul>
-    </div>
+      <div class="con">
+          <!-- I want them to stick together -->
+          <div class="nav-items">
+              <a href="learn.html">
+                  <img src="../assets/nav1.png" alt="Image 1">
+              </a>
+              <a href="quizzes.html">
+                  <img src="../assets/nav2.png" alt="Image 2">
+              </a>
+              <a href="download.html">
+                  <img src="../assets/nav3.png" alt="Image 3">
+              </a>
+              <a href="about.html">
+                  <img src="../assets/nav4.png" alt="Image 4">
+              </a>
+          </div>
+  </div>
   </nav>
+  
   <div id="loginOverlay" class="overlay">
     <div class="overlay-content">
         <h2>Please Log In</h2>
